{{$NEXT}}

1.22   2016-02-21 (TRIAL RELEASE)

- Fixed several issues with the handling of non-integer values passed to
  from_epoch().

  This method was simply broken for negative values, which would end up being
  incremented by a full second, so for example -0.5 became 0.5.

  The method did not accept all valid float values. Specifically, it did not
  accept values in scientific notation.

  Finally, this method now rounds all non-integer values to the nearest
  millisecond. This matches the precision we can expect from Perl itself (53
  bits) in most cases.

  Patch by Christian Hansen. GitHub #11.


1.21   2015-09-30

- Make all tests pass with both the current DateTime::Locale and the upcoming
  new version (currently still in trial releases).


1.20   2015-07-01

- The 1.18 release added the June 30, 2015 leap second to the XS code, but I
  forgot to update the corresponding pure Perl implementation in
  DateTime::LeapSecond.


1.19   2015-05-31

- If you compared a DateTime object to an undef value, you might have received
  a warning pointing to code inside DateTime.pm, instead of in your own
  code. Fixed by Jason McIntosh. GH #7.

- The 30future-tz.t could fail if run at certain very specific times. This
  should now be much less likely, unless a time zone being tested implements a
  DST change at noon (which would even more insane than DST already is by a
  huge factor). Reported by Karen Etheridge and diagnosed by Slaven Rezic. RT
  #102925.


1.18   2015-01-05

- There will be a new leap second on June 30, 2015.


1.17   2015-01-04

- No code changes from the 1.16 release.


1.16   2015-01-04 (TRIAL RELEASE)

- Test fix for systems where IVs are 4 bytes long.


1.15   2015-01-03 (TRIAL RELEASE)

- Trying this again ... Experimental fix for adding very large numbers of
  days. Previously, trying to add more than around 2^28 days could cause
  errors if the result ended up in a leap year. This is being released as a